<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settingsTVSettings"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <!-- Difficulty level -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_label"
            android:id="@+id/settingsTVDifficulty"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsSpinnerDifficulty"/>
    </LinearLayout>

    <!-- Radius -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:id="@+id/settingsTVRadius"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsSpinnerRadius"/>

    </LinearLayout>

    <!-- Number of validation -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsNbOfValidation"
            android:id="@+id/settingsTVNbOfValidation"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/settingsNumberOfValidation"
            android:inputType="number" />
    </LinearLayout>

    <!-- Number of Check -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsNbOfCheck"
            android:id="@+id/settingsTVNbOfCheck"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/settingsNumberOfCheck"
            android:inputType="number" />
    </LinearLayout>

    <!-- Type of information -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_type_of_information"
            android:id="@+id/settingsTVtypeOfInformation"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsSpinnerTypeOfInformation"/>
    </LinearLayout>


    <!-- Type of information -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsTimer"
            android:id="@+id/settingsTVtimer"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsSpinnerTimer"/>
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClickSave"/>


</LinearLayout>

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_label"
        android:id="@+id/labelDifficulty"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/spinnerDifficulty"
        android:layout_marginEnd="51dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDifficulty"
        android:layout_alignTop="@+id/labelDifficulty"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="113dp" />
</RelativeLayout>
-->
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_centerVertical="true"
        android:id="@+id/settingsTVsettings"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTVRadius"
        android:id="@+id/settingsTVRadius"

        android:layout_below="@+id/settingsTVsettings"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/settingsSpinnerRadius"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSpinnerRadius"

        android:layout_alignTop="@+id/settingsTVRadius"
        android:layout_alignParentEnd="true"
        android:layout_toStartOf="@+id/settingsTVRadius"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_label"
        android:id="@+id/labelDifficulty"

        android:layout_below="@+id/settingsTVsettings"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/spinnerDifficulty"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDifficulty"
        android:layout_alignTop="@+id/labelDifficulty"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="113dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsRadiusEditText"
            android:inputType="number" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onClickSave"/>
</RelativeLayout>
-->